--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url("./remove.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
@@ -7,3 +8,23 @@
 *{
     font-family: 'Montserrat','Noto Sans KR' sans-serif;
 }
+a {text-decoration: none; outline: none; color: #fff;}
+a:hover, a:active {text-decoration: none;color: #fff;}
+
+/* until */
+.util-lists-wrap{background:#333;box-sizing: border-box;}
+.util-lists{margin-right: 240px;display: flex;justify-content: flex-end;align-items: center;}
+.util-lists li{display: flex;margin-right: 15px;font-size:13px;padding: 10px;}
+.util-lists li:nth-child(3),
+.util-lists li:nth-child(4){align-items: center;z-index: 1;margin-right: 0;padding-right: 0;}
+.util-lists-bg{height: 42.25px;width: 120px;background-color: #0662c7;position: absolute;right: 220px;top: 0;}
+
+
+
+
+/* navi-lists */
+.sellpy-menu{display: flex; justify-content: space-around; align-items: center;margin-top:30px;}
+.sellpy-menu-lists{display: flex;}
+.sellpy-menu-lists li{margin-left: 22px; font-weight: 400; font-size:14px;}
+.sellpy-menu-lists a{color: #333;}
+.sellpy-menu-lists a:hover{color: rgb(51, 51, 51,0.8);}
