--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 @charset "utf-8";
 @import url("./remove.css");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+*{font-family: 'Montserrat','Noto Sans KR', sans-serif;}
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-
-*{
-    font-family: 'Montserrat','Noto Sans KR' sans-serif;
-}
 a {text-decoration: none; outline: none; color: #fff;}
-a:hover, a:active {text-decoration: none;color: #fff;}
+a:hover, a:active {text-decoration: none; color: #fff;}
+
 
 /* until */
 .util-lists-wrap{background:#333;box-sizing: border-box;}
@@ -17,9 +14,7 @@ a:hover, a:active {text-decoration: none;color: #fff;}
 .util-lists li{display: flex;margin-right: 15px;font-size:13px;padding: 10px;}
 .util-lists li:nth-child(3),
 .util-lists li:nth-child(4){align-items: center;z-index: 1;margin-right: 0;padding-right: 0;}
-.util-lists-bg{height: 42.25px;width: 120px;background-color: #0662c7;position: absolute;right: 220px;top: 0;}
-
-
+.util-lists-bg{height: 44px;width: 120px;background-color: #0662c7;position: absolute;right: 220px;top: 0;}
 
 
 /* navi-lists */
@@ -28,3 +23,15 @@ a:hover, a:active {text-decoration: none;color: #fff;}
 .sellpy-menu-lists li{margin-left: 22px; font-weight: 400; font-size:14px;}
 .sellpy-menu-lists a{color: #333;}
 .sellpy-menu-lists a:hover{color: rgb(51, 51, 51,0.8);}
+
+
+/* sellpy-mainvisual */
+.sellpy-mainvisual{display: flex; align-items: center;}
+.sellpy-mainvisual img{width: 50%; z-index: -9; position: relative; top: -56px;}
+.sellpy-mainvisual-desc{text-align: center; margin-left: 30px;}
+.sellpy-mainvisual-desc h2{font-size: 2.3em; color: #0662c7; margin-bottom:10px}
+.desc-redline{width: 130px; height: 9px; background-color:#d14124;}
+.sellpy-mainvisual-desc p{font-size: 1.2em; margin-bottom: 25px; letter-spacing: -1px;}
+.sellpy-mainvisual-desc button{border-style: none;padding: 10px 30px;
+font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transition:.3s;}
+.sellpy-mainvisual-desc button:hover{ color: rgb(51, 51, 51,0.8);}
