--- a/css/remove.css
+++ b/css/remove.css
@@ -15,14 +15,13 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font-family: 'Montserrat','Noto Sans KR' sans-serif;
 	vertical-align: baseline;
 }
 
-a {text-decoration: none; outline: none;}
-a:hover, a:active {text-decoration: none;}
 
 /* HTML5 display-role reset for older browsers */
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
