--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,50 @@ a:hover, a:active {text-decoration: none; color: #fff;}
 /* sellpy-mainvisual */
 .sellpy-mainvisual{display: flex; align-items: center;}
 .sellpy-mainvisual img{width: 50%; z-index: -9; position: relative; top: -56px;}
-.sellpy-mainvisual-desc{text-align: center; margin-left: 30px;}
+.sellpy-mainvisual-desc{text-align: center; margin-left: 45px;}
 .sellpy-mainvisual-desc h2{font-size: 2.3em; color: #0662c7; margin-bottom:10px}
 .desc-redline{width: 130px; height: 9px; background-color:#d14124;}
 .sellpy-mainvisual-desc p{font-size: 1.2em; margin-bottom: 25px; letter-spacing: -1px;}
 .sellpy-mainvisual-desc button{border-style: none;padding: 10px 30px;
 font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transition:.3s;}
 .sellpy-mainvisual-desc button:hover{ color: rgb(51, 51, 51,0.8);}
+
+
+/* sellpy-products */
+.sellpy-contents{position: relative;}
+.gray-line{border: 0.2px solid #eee; margin:66px 0}
+.sellpy-contents-wrap{
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    box-sizing: border-box;
+    grid-gap: 15px;
+}
+.sellpy-content img{max-width:100%; height:auto;
+}
+
+.sellpy-content:nth-child(1){
+    grid-column:1;
+    grid-row: 1;
+}
+
+.sellpy-content:nth-child(2){
+    grid-column:2;
+    grid-row: 1;
+}
+.sellpy-content:nth-child(3){
+    grid-column:1/ span 2;
+    grid-row: 2;
+    
+}
+.sellpy-content:nth-child(4){
+    grid-column:3/ span 2;
+    grid-row: 1;
+}
+.sellpy-content:nth-child(5){
+    grid-column:3;
+    grid-row: 2;
+}
+.sellpy-content:nth-child(6){
+    grid-column:4;
+    grid-row: 2;
+}
