--- a/css/main.css
+++ b/css/main.css
@@ -18,16 +18,17 @@ a:hover, a:active {text-decoration: none; color: #fff;}
 
 
 /* navi-lists */
-.sellpy-menu{display: flex; justify-content: space-around; align-items: center;margin-top:30px;}
+.sellpy-menu{width: 77%;
+    display: flex; justify-content: space-between; align-items: center;margin:30px auto;}
 .sellpy-menu-lists{display: flex;}
-.sellpy-menu-lists li{margin-left: 22px; font-weight: 400; font-size:14px;}
+.sellpy-menu-lists li{margin-left: 30px; font-weight: 400; font-size:14px;}
 .sellpy-menu-lists a{color: #333;}
 .sellpy-menu-lists a:hover{color: rgb(51, 51, 51,0.8);}
 
 
 /* sellpy-mainvisual */
 .sellpy-mainvisual{display: flex; align-items: center;}
-.sellpy-mainvisual img{width: 50%; z-index: -9; position: relative; top: -56px;}
+.sellpy-mainvisual img{width: 50%; z-index: -9; position: relative; top: -86px;}
 .sellpy-mainvisual-desc{text-align: center; margin-left: 45px;}
 .sellpy-mainvisual-desc h2{font-size: 2.3em; color: #0662c7; margin-bottom:10px}
 .desc-redline{width: 130px; height: 9px; background-color:#d14124;}
@@ -75,3 +76,10 @@ font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transit
     grid-column:4;
     grid-row: 2;
 }
+.sellpy-lookbook {display: flex; text-align: center;}
+.sellpy-lookbook img{max-width:90%; height:auto;}
+
+.sellpy-footer{margin-top: 150px; background-color: #f8f8f8; height:40.650vh;}
+.sellpy-footer-lists{display: flex;}
+.sellpy-footer-inner{display:flex; justify-content: center;}
+.sellpy-footer .sellpy-footer-lists li a{color: #333;}
