--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,7 @@ a:hover, a:active {text-decoration: none; color: #fff;}
 
 
 /* navi-lists */
-.sellpy-menu{width: 77%;
-    display: flex; justify-content: space-between; align-items: center;margin:30px auto;}
+.sellpy-menu{width: 77%;display: flex; justify-content: space-between; align-items: center;margin:30px auto;}
 .sellpy-menu-lists{display: flex;}
 .sellpy-menu-lists li{margin-left: 30px; font-weight: 400; font-size:14px;}
 .sellpy-menu-lists a{color: #333;}
@@ -27,58 +26,32 @@ a:hover, a:active {text-decoration: none; color: #fff;}
 
 
 /* sellpy-mainvisual */
-.sellpy-mainvisual{display: flex; align-items: center;}
-.sellpy-mainvisual img{width: 50%; z-index: -9; position: relative; top: -86px;}
-.sellpy-mainvisual-desc{text-align: center; margin-left: 45px;}
-.sellpy-mainvisual-desc h2{font-size: 2.3em; color: #0662c7; margin-bottom:10px}
+.sellpy-mainvisual{display: flex; align-items: center; justify-content: space-between;}
+.sellpy-mainvisual img{width: 80%; z-index: -9; position: relative; top:-90px;}
+.sellpy-mainvisual-desc{text-align: center; z-index:9; position: relative; left:-250px;}
+.sellpy-mainvisual-desc h2{font-size: 3.0em; color: #0662c7; margin-bottom:20px}
 .desc-redline{width: 130px; height: 9px; background-color:#d14124;}
-.sellpy-mainvisual-desc p{font-size: 1.2em; margin-bottom: 25px; letter-spacing: -1px;}
+.sellpy-mainvisual-desc p{font-size: 1.2em; margin-bottom: 25px; letter-spacing: -0.3px;}
 .sellpy-mainvisual-desc button{border-style: none;padding: 10px 30px;
 font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transition:.3s;}
 .sellpy-mainvisual-desc button:hover{ color: rgb(51, 51, 51,0.8);}
 
 
 /* sellpy-products */
-.sellpy-contents{position: relative;}
+.sellpy-contents{position: relative; margin:0 auto;}
 .gray-line{border: 0.2px solid #eee; margin:66px 0}
-.sellpy-contents-wrap{
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    box-sizing: border-box;
-    grid-gap: 15px;
-}
-.sellpy-content img{max-width:100%; height:auto;
-}
+.sellpy-contents-wrap{display: flex; justify-content: center}
+.sellpy-content img{max-width:100%; height:auto;}
+.sellpy-content{display: flex;}
+.sellpy-content:nth-child(1),.sellpy-content:nth-child(2){justify-content: space-between;}
+.sellpy-content:nth-child(5),.sellpy-content:nth-child(6){justify-content:space-between;}
+.up{margin-top: 20px;}
+.sellpy-content-divide{margin: 0 10px;}
 
-.sellpy-content:nth-child(1){
-    grid-column:1;
-    grid-row: 1;
-}
 
-.sellpy-content:nth-child(2){
-    grid-column:2;
-    grid-row: 1;
-}
-.sellpy-content:nth-child(3){
-    grid-column:1/ span 2;
-    grid-row: 2;
-    
-}
-.sellpy-content:nth-child(4){
-    grid-column:3/ span 2;
-    grid-row: 1;
-}
-.sellpy-content:nth-child(5){
-    grid-column:3;
-    grid-row: 2;
-}
-.sellpy-content:nth-child(6){
-    grid-column:4;
-    grid-row: 2;
-}
+/*sellpy-lookbook */
 .sellpy-lookbook {display: flex; text-align: center;}
 .sellpy-lookbook img{max-width:90%; height:auto;}
-
 .sellpy-footer{margin-top: 150px; background-color: #f8f8f8; height:40.650vh;}
 .sellpy-footer-lists{display: flex;}
 .sellpy-footer-inner{display:flex; justify-content: center;}
