--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,12 @@ font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transit
 .sellpy-footer-lists{display: flex;}
 .sellpy-footer-inner{display:flex; justify-content: center;}
 .sellpy-footer .sellpy-footer-lists li a{color: #333;}
+
+.sellpy-lookbook-list{text-align: right; position:relative; top: -130px; right:50px}
+.sellpy-lookbook-mens:hover .sellpy-lookbook-list{display: block;}
+.sellpy-lookbook-women:hover .sellpy-lookbook-list{display: block;}
+.sellpy-magazine:hover .sellpy-lookbook-list{ }
+.sellpy-lookbook h3{font-size: 1.7em;}
+.sellpy-lookbook button{border-style: none;padding: 5px 30px;
+    font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transition:.3s; margin-top:10px;}
+.sellpy-lookbook-list{filter: invert(1);}
