--- a/css/main.css
+++ b/css/main.css
@@ -42,12 +42,18 @@ font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transit
 .sellpy-contents{position: relative; margin:0 auto;}
 .gray-line{border: 0.2px solid #eee; margin:66px 0}
 .sellpy-contents-wrap{display: flex; justify-content: center}
-.sellpy-content img{max-width:100%; height:auto;}
+.sellpy-content{position:relative; max-width:100%; height:auto;}
+.sellpy-content-text{position:absolute; text-align:center;width:100%; height:100%; color:#fff; top:50%; opacity:0; transition:.5s;}
+.sellpy-content-text p{font-size:1.3em;}
+.sellpy-content-text span{ font-size:2em;}
+.hover-space:hover .sellpy-content-text{opacity: 1;}
 .sellpy-content{display: flex;}
+
 .sellpy-content:nth-child(1),.sellpy-content:nth-child(2){justify-content: space-between;}
 .sellpy-content:nth-child(5),.sellpy-content:nth-child(6){justify-content:space-between;}
 .up{margin-top: 20px;}
 .sellpy-content-divide{margin: 0 10px;}
+
 
 
 /*sellpy-lookbook */
@@ -59,6 +65,7 @@ font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transit
 .sellpy-lookbook h3{font-size: 1.7em;}
 .sellpy-lookbook button{border-style: none;padding: 5px 30px;
     font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transition:.3s; margin-top:10px;}
+.sellpy-lookbook button:hover{background-color:whitesmoke;}
 .sellpy-lookbook-list{filter: invert(1);}
 
 
@@ -70,5 +77,7 @@ font-size: 1em; border: 1px solid #333; background:none; cursor: pointer;transit
 .sellpy-footer-inner{display:flex; justify-content: center;}
 .sellpy-footer .sellpy-footer-lists li a{color: #333;}
 .sellpy-footer-inner li{margin-right: 20px;}
+.sellpy-footer-inner li a:hover{color: rgb(51, 51, 51,0.7);}
 .sellpy-sns{display: flex;margin-top: 100px;}
 .sellpy-sns a{margin-right: 10px;}
+.sellpy-sns a:hover {filter: invert(0.5);}
